# hx-experimental-blok

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md
_src/: main.c
_src/core/: context.h
_src/model/: direction.c  direction.h  dynlist.h  square.h  vector2.c
_src/presentation/components/: canvas.h  panel.h
_src/presentation/graphics/: drawing.c  drawing.h  renderer.c  renderer.h  theme.c
res/: resource.rc
src/: main.c
src/core/: args.c  args.h  context.c  context.h  lifecycle.c  lifecycle.h  log.c  log.h  module.c  module.h  program.c  program.h  result.c  result.h  theme.h
src/core/config/: args.c  args.h
src/core/debug/: console.c  console.h
src/core/gfx/: drawtools.c  drawtools.h  graphics.c  graphics.h  theme.c  theme.h
src/core/main/: context.c  context.h  lifecycle.c
src/model/: box.h  direction.h  dynlist.h  square.h  state.c  state.h  vector.c  vector.h  vector2.c  vector2.h
src/model/maths/: direction.c  direction.h  dynlist.c  dynlist.h  vector.c  vector.h
src/model/object/: square.c  square.h
src/model/objects/: square.h
src/model/utility/: direction.h  position.c  position.h  size.c  size.h  vector.c  vector.h
src/presentation/: viewport.c  viewport.h  window.c  window.h
src/presentation/components/: canvas.c  canvas.h  panel.c  panel.h
src/presentation/controls/: button.c  button.h  progress-bar.h  progressbar.c  progressbar.h  text.c  text.h  toggle-button.h  toggle.c  toggle.h
src/presentation/events/: handler.c  handler.h  process.c  process.h
src/presentation/frame/: window.c  window.h
src/presentation/graphics/: drawing.c  drawing.h  renderer.h  theme.c  theme.h
src/presentation/objects/: block.c  block.h  obstructables.c  obstructables.h
src/presentation/viewport/: events.h  window.c  window.h
src/service/: convert.c  convert.h
